bicep/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.40.2.10011",
      "templateHash": "966526291896528841"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources"
      }
    },
    "environment": {
      "type": "string",
      "defaultValue": "dev",
      "allowedValues": [
        "dev",
        "stg",
        "prd"
      ],
      "metadata": {
        "description": "Environment name (dev, stg, prd)"
      }
    },
    "projectName": {
      "type": "string",
      "defaultValue": "lz-demo",
      "metadata": {
        "description": "Project or workload name"
      }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "VNet address space"
      }
    },
    "subnets": {
      "type": "array",
      "defaultValue": [
        {
          "name": "snet-web",
          "addressPrefix": "10.0.1.0/24",
          "serviceEndpoints": [
            "Microsoft.Storage",
            "Microsoft.Sql"
          ]
        },
        {
          "name": "snet-app",
          "addressPrefix": "10.0.2.0/24",
          "serviceEndpoints": [
            "Microsoft.Storage",
            "Microsoft.Sql"
          ]
        },
        {
          "name": "snet-db",
          "addressPrefix": "10.0.3.0/24",
          "serviceEndpoints": [
            "Microsoft.Storage",
            "Microsoft.Sql"
          ]
        },
        {
          "name": "AzureBastionSubnet",
          "addressPrefix": "10.0.255.0/26",
          "serviceEndpoints": []
        }
      ],
      "metadata": {
        "description": "Subnet configurations"
      }
    },
    "tags": {
      "type": "object",
      "defaultValue": {
        "Environment": "[parameters('environment')]",
        "Project": "[parameters('projectName')]",
        "ManagedBy": "Bicep",
        "CreatedDate": "[utcNow('yyyy-MM-dd')]"
      },
      "metadata": {
        "description": "Tags to apply to all resources"
      }
    }
  },
  "variables": {
    "namingPrefix": "[format('{0}-{1}', parameters('projectName'), parameters('environment'))]",
    "vnetName": "[format('vnet-{0}', variables('namingPrefix'))]",
    "nsgWebName": "[format('nsg-{0}-web', variables('namingPrefix'))]",
    "nsgAppName": "[format('nsg-{0}-app', variables('namingPrefix'))]",
    "nsgDbName": "[format('nsg-{0}-db', variables('namingPrefix'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[variables('nsgWebName')]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHTTPS",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowHTTP",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "DenyAllInbound",
            "properties": {
              "priority": 4096,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[variables('nsgAppName')]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowWebTier",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "10.0.1.0/24",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "DenyInternetInbound",
            "properties": {
              "priority": 4096,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[variables('nsgDbName')]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowAppTier",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "10.0.2.0/24",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "DenyInternetInbound",
            "properties": {
              "priority": 4096,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-09-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnets')[0].name]",
            "properties": {
              "copy": [
                {
                  "name": "serviceEndpoints",
                  "count": "[length(parameters('subnets')[0].serviceEndpoints)]",
                  "input": {
                    "service": "[parameters('subnets')[0].serviceEndpoints[copyIndex('serviceEndpoints')]]"
                  }
                }
              ],
              "addressPrefix": "[parameters('subnets')[0].addressPrefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgWebName'))]"
              }
            }
          },
          {
            "name": "[parameters('subnets')[1].name]",
            "properties": {
              "copy": [
                {
                  "name": "serviceEndpoints",
                  "count": "[length(parameters('subnets')[1].serviceEndpoints)]",
                  "input": {
                    "service": "[parameters('subnets')[1].serviceEndpoints[copyIndex('serviceEndpoints')]]"
                  }
                }
              ],
              "addressPrefix": "[parameters('subnets')[1].addressPrefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]"
              }
            }
          },
          {
            "name": "[parameters('subnets')[2].name]",
            "properties": {
              "copy": [
                {
                  "name": "serviceEndpoints",
                  "count": "[length(parameters('subnets')[2].serviceEndpoints)]",
                  "input": {
                    "service": "[parameters('subnets')[2].serviceEndpoints[copyIndex('serviceEndpoints')]]"
                  }
                }
              ],
              "addressPrefix": "[parameters('subnets')[2].addressPrefix]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDbName'))]"
              }
            }
          },
          {
            "name": "[parameters('subnets')[3].name]",
            "properties": {
              "addressPrefix": "[parameters('subnets')[3].addressPrefix]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDbName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgWebName'))]"
      ]
    }
  ],
  "outputs": {
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
    },
    "vnetName": {
      "type": "string",
      "value": "[variables('vnetName')]"
    },
    "subnetIds": {
      "type": "object",
      "value": {
        "web": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2023-09-01').subnets[0].id]",
        "app": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2023-09-01').subnets[1].id]",
        "db": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2023-09-01').subnets[2].id]",
        "bastion": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2023-09-01').subnets[3].id]"
      }
    },
    "nsgIds": {
      "type": "object",
      "value": {
        "web": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgWebName'))]",
        "app": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]",
        "db": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDbName'))]"
      }
    }
  }
}
